fix layout bug

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1091,48 +1091,6 @@ a {
 .cid-sDLMT248nJ .card-text {
   color: #ffffff;
 }
-.cid-sFPmDdgFTf {
-  padding-top: 3rem;
-  padding-bottom: 6rem;
-  background-color: #232323;
-}
-.cid-sFPmDdgFTf .content-wrapper {
-  background: #232323;
-}
-@media (max-width: 991px) {
-  .cid-sFPmDdgFTf .content-wrapper .image-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sFPmDdgFTf .content-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-sFPmDdgFTf .content-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sFPmDdgFTf .content-wrapper {
-    padding: 5rem 3rem;
-  }
-  .cid-sFPmDdgFTf .content-wrapper .text-wrapper {
-    padding-left: 2rem;
-  }
-}
-.cid-sFPmDdgFTf .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-sFPmDdgFTf .card-title {
-  color: #22a5e5;
-}
-.cid-sFPmDdgFTf .mbr-text,
-.cid-sFPmDdgFTf .mbr-section-btn {
-  color: #ffffff;
-}
 .cid-sDLOq8pL34 {
   padding-top: 0rem;
   padding-bottom: 0rem;
